12-deploying-containers/kubernetes/client-react-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: client-react-nginx
spec:
  selector:
    app: client-react-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-react-nginx
  labels:
    app: client-react-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-react-nginx
  template:
    metadata:
      labels:
        app: client-react-nginx
    spec:
      containers:
      - image: sidpalas/devops-directive-docker-course-client-react-nginx:5
        name: client-react-nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8080
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-conf
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-conf
        name: nginx-conf
