12-deploying-containers/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary
  namespace: default
spec:
  defaultBackend:
    service:
      name: client-react-nginx
      port:
        number: 80
